# baumanec-bank

./: .gitignore  Dockerfile  docker-compose.yaml  playbook.yaml  requirenments.txt
account-app/: Dockerfile  keyboard_functions.py  main.py  salary.py  service.py  start_help.py  update.py
bank-app/: Dockerfile  balance.py  deposit.py  loan.py  main.py  operations.py  repay.py  withdraw.py
card-creator/: Makefile  firms.template.fodg  main.py
client-app/: Dockerfile  keyboard_functions.py  main.py  service.py  start.py  update.py
common-package/: Makefile  README.md  pyproject.toml  requirenments.txt
common-package/src/baumanecbank_common/: __init__.py  abstract.py  application.py  application_create.py  filter.py  handlers.py  i18n.py  log.py  postgres.py  qr.py
database/: postgres-scheme.sql
government-app/: Dockerfile  client.py  main.py  transaction.py
i18n/: ru-RU.yaml
market-app/: Dockerfile  main.py  purchase.py
spread-sheet-sync/: accounts.py  clients.py  employees.py  labor.py  service.py  theater.py
